[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-grid"
version = "0.2.0"
description = "Optimized distributed GPU cluster orchestration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Grid Team", email = "team@grid.local"}
]
keywords = ["distributed", "gpu", "ray", "cluster", "orchestration"]

dependencies = [
    "ray[default]>=2.10.0",
    "paramiko>=3.0.0",
    "pyyaml>=6.0",
    "prometheus-client>=0.17.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
