[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "distributed-grid"
version = "0.2.0"
description = "Optimized distributed GPU cluster orchestration"
authors = ["Grid Team <team@grid.local>"]
readme = "README.md"
packages = [{include = "distributed_grid", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
ray = {version = "^2.10.0", extras = ["default"]}
paramiko = "^3.0.0"
pyyaml = "^6.0"
prometheus-client = "^0.17.0"
python-json-logger = "^2.0.7"
python-dotenv = "^1.0.0"
click = "^8.0.0"
structlog = "^23.1.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
asyncio-mqtt = "^0.16.0"
aiofiles = "^23.2.0"
rich = "^13.7.0"
typer = "^0.9.0"
fastapi = "^0.110.0"
uvicorn = {version = "^0.27.0", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.1"
pytest-asyncio = "^0.23"
pytest-mock = "^3.12"
httpx = "^0.26"
ruff = "^0.2"
mypy = "^1.8"
pre-commit = "^3.6"
coverage = "^7.4"
tox = "^4.11"

[tool.poetry.scripts]
grid = "distributed_grid.cli:main"